# 2fa_login

./: .gitignore  Caddyfile  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
front/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
front-login/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
front-login/src/: main.ts  style.css  types.ts  vite-env.d.ts
front-login/src/components/: loginDetails.ts  registerComponent.ts
front/src/hooks/: index.ts
front/src/lib/: FormInput.svelte  FormInput.test.ts
front/src/lib/utils/: YupSchemaParser.ts
front/src/routes/: __layout.svelte  index.svelte
front/src/routes/login/: index.svelte  login.spec.ts
front/src/routes/register/: index.svelte  register.spec.ts
front/src/styles/: global.css
front/src/tests/: setup.ts
front/src/tests/mocks/: handlers.ts  server.ts
rust-server/: .gitignore  Cargo.toml
rust-server/src/: auth.rs  lib.rs  main.rs  server_messages.rs  users.rs  utils.rs
rust-server/src/routes/: auth.rs
