[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
futures = "0.3"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-cors = "0.6.0-beta.10"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }
anyhow = { version = "1.0", default-features = false }
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls","macros", "postgres", "json", "migrate","uuid" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
thiserror = "1.0"
jsonwebtoken = "8"
dotenv = "0.15"

[dev-dependencies]
rand = "0.8"